# 2023/02/03
- Maybe actually stopped bard crashes
- Fix error in buff requests with unrecognized spells

# 2023/02/01
- More attempts at bard clicky issues
- Med fixes
- Attempt to fix some pull return issues
- Add timestamps option

# 2023/01/31
- Longer delay after stopcast before using clickies on bard
- Remove dup DMZ zone id list
- Add 'nodmz' check to spells like lich that drain HP
- Add reagent check to pet summoning before memorizing spell
- Only click charm for geomantra if charm clicky is geomantra
- Extra debug on pull routine
- Fix spell resist event
- Check if corpse cannot be rezzed before rezzing
- Fix looting own corpse after rez

# 2023/01/30
- ASSISTNAMES to list out priority order of people to manually assist
- MEDCOMBAT to toggle whether to keep medding during combat
- Pull med settings changed to be used for medding in general
- OMM mask event

# 2023/01/29
- Some cleanup work
- Try making bard clickies less crashy

# 2023/01/27
- All the things
- UI Status Section: Added help button to open new window with all available commands
- UI General Settings:
  1. Main Tank checkbox - For EMU where group MainTank role is unreliable, this lets tanks use tank abilities in manual mode.
  2. Loot Mobs - For EMU where there is no advloot, enable looting of mobs.
  3. Auto Detect Raid - For EMU where raid assist roles don't work, automatically swap to manual assist mode when in a raid
- UI Assist Settings:
  1. Assist - For EMU, addnew new `manual` assist option which will make toons use `/assist` command instead of relying on assist roles.
- UI Burn Settings:
  1. New quick burn, long burn, full burn buttons. Didn't really finish implementing these, there is basically just full burn.
- UI Pull Settings:
  1. Added pull method, swap between melee, ranged, spell, custom function for class.
- UI Debug Settings:
  1. New restart AQO button to restart the lua script
  2. New update AQO button to download new aqo.zip from GitHub EMU branch.